# DOOM

./: .gitignore  CMakeLists.txt  Makefile  README.MD  README.TXT  README.md  build.zig  buildsteps.txt  readme.md  run.sh  todo.md
bin-doom/: CMakeLists.txt  d_main.c  f_finale.c  g_game.c  i_sound.c  i_video.c  m_swap.c  p_ceilng.c  p_saveg.h  p_switch.c  r_data.c  r_defs.h  r_draw.c  r_state.h  s_sound.c  st_lib.c  st_lib.h  wi_stuff.c
bin-sndserv/: CMakeLists.txt  sounds.c  soundsrv.c  wadread.h
ipx/: DOOMNET.H  IPXNET.C  IPXNET.H  IPXSTR.H  IPX_FRCH.H  README
lib-ipx/: DOOMNET.C  IPXSETUP.C
lib-ser/: DOOMNET.H  PORT.C  SERSETUP.H  SERSTR.H
linuxdoom-1.10/: .gitignore  ChangeLog  DOOMLIC.TXT  FILES2  Makefile  README.book  README.gl  README.md  README.sound  am_map.c  am_map.h  d_englsh.h  d_event.h  d_french.h  d_items.c  d_items.h  d_main.c  d_main.h  d_net.c  d_net.h  d_player.h  d_textur.h  d_think.h  d_ticcmd.h  doomdata.h  doomdef.c  doomdef.h  doomstat.c  doomstat.h  doomtype.h  dstrings.c  dstrings.h  f_finale.c  f_finale.h  f_wipe.c  f_wipe.h  g_game.c  g_game.h  hu_lib.c  hu_lib.h  (+98 more)
sersrc/: DOOMNET.C  README.TXT  SERSETUP.C  SER_FRCH.H
sndserv/: Makefile  README.md  README.sndserv  linux.c  sounds.c  sounds.h  soundsrv.c  soundsrv.h  soundst.h  wadread.c
src/: .gitignore  FILES  Makefile  Makefile.macos  README.asm  TODO  am_map.c  cvector.h  d_englsh.h  d_event.h  d_french.h  d_items.h  d_main.c  d_main.h  d_net.c  d_textur.h  doomdata.h  doomdef.h  doomstat.c  doomstat.h  doomtype.h  dstrings.h  f_wipe.c  g_game.c  g_game.h  i_input.c  i_net.c  (+54 more)
(+5 files in other folders)
